# ibm-ponder-this

./: .gitignore
2014.06/: ibm.cpp  ibm.py  ibm.txt  solutions.txt
2014.07/: july.cpp
2014.08/: binary.cpp
2014.09/: september.cpp
2014.10/: cycles.nb  october.cpp
2014/2014.06/: cubes.cpp
2014/2014.07/: game.cpp
2015.01-02/: kakuro.cpp  partitions.cpp
2015.03/: CMakeLists.txt  graph.nb  powerset.h  tape.cpp
2015.03/solutions/: 26.txt  CMakeLists.txt
2015.04/: cube.cpp  cube.html  vect.hpp
2015.04/js/: cube-canvas.js  cube.js
2015.05/: game.cpp
2015.06/: complex.cpp
2015/april/: vect.hpp
2015/april/js/: cube.js
2015/january-february/: partitions.cpp
2015/june/: complex.cpp
2015/march/: .gitignore  CMakeLists.txt
2015/march/solutions/: 24.txt  25.txt
2015/may/: game.cpp  graph.cpp
2015/november/: dictionary.cpp  english.dict  watson.cpp
2015/september/: 32.set.sorted  awards.cpp  better.cpp
2016/january/: gears.cpp
2016/march/: squareversed.cpp  squareversed.py
2016/october/: printers.py
2016/september/: fourpeople.cpp  fourpeople.py
2017/january/: equation.py
